--- a/webmobile-base/public/index.html
+++ b/webmobile-base/public/index.html
@@ -8,6 +8,11 @@
     <title>INJEONG</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
+    <style>
+      html {
+        scroll-behavior :smooth;
+      }
+    </style>
   </head>
   <body>
     <noscript>
