--- a/webmobile-base/public/index.html
+++ b/webmobile-base/public/index.html
@@ -15,10 +15,13 @@
     </style>
   </head>
   <body>
+    <script src="https://unpkg.com/marked@0.3.6"></script>
+    <script src="https://unpkg.com/lodash@4.16.0"></script>
     <noscript>
       <strong>We're sorry but ssafy doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+
 </html>
