chrome이외 브라우저에서 알림창 띄우기

--- a/webmobile-base/public/index.html
+++ b/webmobile-base/public/index.html
@@ -23,5 +23,13 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script>
+    if (navigator.userAgent.toLowerCase().indexOf("chrome") != 81) {
+      // != 81
+      alert("해당 사이트는 크롬에 최적화 되어 있습니다.")
+    } else {
+      console.log("1")
+    }
 
+  </script>
 </html>
