날씨 header에 추가

--- a/webmobile-base/public/index.html
+++ b/webmobile-base/public/index.html
@@ -12,6 +12,9 @@
       html {
         scroll-behavior :smooth;
       }
+      #app {
+        font-family: 'Oswald', sans-serif;
+      }
     </style>
   </head>
   <body>
