--- a/webmobile-base/public/index.html
+++ b/webmobile-base/public/index.html
@@ -31,7 +31,7 @@
       // != 81
       alert("해당 사이트는 크롬에 최적화 되어 있습니다.")
     } else {
-      console.log("1")
+      // console.log("1")
     }
 
   </script>
